{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 1276,
  "lineage": "d04aa3e3-f9f6-32d5-dcd7-cf2dfe52f9c8",
  "resources": [
    {
      "module": "module.aws_terra_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07651f0c4c315a529",
            "arn": "arn:aws:ec2:ap-southeast-1:785961692767:instance/i-0210d3ea206b99162",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0210d3ea206b99162",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-020712fc942c401c9",
            "private_dns": "ip-10-50-10-180.ap-southeast-1.compute.internal",
            "private_ip": "10.50.10.180",
            "public_dns": "ec2-18-141-162-68.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.162.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04a7e957b9047fb1c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-002a82fb050427634"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b560b129b6074f64",
            "tags": {
              "Name": "terraform instance"
            },
            "tags_all": {
              "Name": "terraform instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-002a82fb050427634"
            ]
          },
          "dependencies": [
            "module.aws_terra_instance.aws_security_group.security_group",
            "module.aws_terra_instance.data.aws_ami.ubuntu",
            "module.aws_terra_vpc.aws_subnet.subnet",
            "module.aws_terra_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_terra_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:785961692767:security-group/sg-002a82fb050427634",
            "description": "Enable SSH and HTTP Connection on Port 22 and 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002a82fb050427634",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Security Group for Terraform Instance",
            "name_prefix": "",
            "owner_id": "785961692767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG of Terraform Instance"
            },
            "tags_all": {
              "Name": "SG of Terraform Instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0522e72c7b3470dd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_terra_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_terra_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:785961692767:internet-gateway/igw-02fd99f3870b808c8",
            "id": "igw-02fd99f3870b808c8",
            "owner_id": "785961692767",
            "tags": {
              "Name": "IGW VPC Terraform"
            },
            "tags_all": {
              "Name": "IGW VPC Terraform"
            },
            "vpc_id": "vpc-0522e72c7b3470dd8"
          },
          "dependencies": [
            "module.aws_terra_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_terra_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:785961692767:route-table/rtb-078d91fccd7676c19",
            "id": "rtb-078d91fccd7676c19",
            "owner_id": "785961692767",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02fd99f3870b808c8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table Terraform"
            },
            "tags_all": {
              "Name": "Route Table Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0522e72c7b3470dd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_terra_vpc.aws_internet_gateway.internet_gateway",
            "module.aws_terra_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_terra_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_with_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0554f95f72f5ba07c",
            "route_table_id": "rtb-078d91fccd7676c19",
            "subnet_id": "subnet-0b560b129b6074f64"
          },
          "dependencies": [
            "module.aws_terra_vpc.aws_internet_gateway.internet_gateway",
            "module.aws_terra_vpc.aws_route_table.route_table",
            "module.aws_terra_vpc.aws_subnet.subnet",
            "module.aws_terra_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_terra_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:785961692767:subnet/subnet-0b560b129b6074f64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.50.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b560b129b6074f64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785961692767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet Terraform"
            },
            "tags_all": {
              "Name": "Subnet Terraform"
            },
            "vpc_id": "vpc-0522e72c7b3470dd8"
          },
          "dependencies": [
            "module.aws_terra_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_terra_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:785961692767:vpc/vpc-0522e72c7b3470dd8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.50.0.0/16",
            "default_network_acl_id": "acl-0a192d974c18588e8",
            "default_route_table_id": "rtb-0d1b60ae83d378ef4",
            "default_security_group_id": "sg-0792ef9aee43f5c31",
            "dhcp_options_id": "dopt-08225c60d5eb0e0a6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0522e72c7b3470dd8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1b60ae83d378ef4",
            "owner_id": "785961692767",
            "tags": {
              "Name": "VPC Terraform"
            },
            "tags_all": {
              "Name": "VPC Terraform"
            }
          }
        }
      ]
    }
  ]
}